--- a/atom/calculatorxd.html/style.css
+++ b/atom/calculatorxd.html/style.css
@@ -1,27 +1,27 @@
 <!-- for styling -->
 <style>
 .title{
-border-radius: 10px;
-margin-bottom: 10px;
-text-align:center;
-width: 210px;
-color:#ff4456;
-border: solid black 1px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+    text-align:center;
+  width: 210px;
+  color:#ff4456;
+  border: solid black 1px;
 }
 input[type="button"]
 {
-border-radius: 10px;
-background-color:#ff4456;
-color: black;
-border-color:#ff4456 ;
-width:100%;
+  border-radius: 100px;
+  background-color:midnightblue;
+  color: gold;
+  border-color:#gold ;
+  width:90%;
 }
 input[type="text"]
 {
-border-radius: 10px;
-text-align: right;
-background-color:white;
-border-color: black ;
-width:100%
+  border-radius: 10px;
+  text-align: right;
+  background-color:navy;
+  border-color: gold;
+  width:95%
 }
 </style>
